[package]
name = "y2021"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "d01_1"
path = "src/d01_1/main.rs"

[[bin]]
name = "d01_2"
path = "src/d01_2/main.rs"

[[bin]]
name = "d02_1"
path = "src/d02_1/main.rs"

[[bin]]
name = "d02_2"
path = "src/d02_2/main.rs"

[[bin]]
name = "d03_1"
path = "src/d03_1/main.rs"

[[bin]]
name = "d03_2"
path = "src/d03_2/main.rs"

[dependencies]
anyhow = "1.0"
itertools = "0.13"
regex = "1.11.1"
