[package]
name = "y2021"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "d01_1"
path = "src/d01_1/main.rs"

[[bin]]
name = "d01_2"
path = "src/d01_2/main.rs"

[[bin]]
name = "d02_1"
path = "src/d02_1/main.rs"

[[bin]]
name = "d02_2"
path = "src/d02_2/main.rs"

[[bin]]
name = "d03_1"
path = "src/d03_1/main.rs"

[[bin]]
name = "d03_2"
path = "src/d03_2/main.rs"

[[bin]]
name = "d04_1"
path = "src/d04_1/main.rs"

[[bin]]
name = "d04_2"
path = "src/d04_2/main.rs"

[[bin]]
name = "d05_1"
path = "src/d05_1/main.rs"

[[bin]]
name = "d05_2"
path = "src/d05_2/main.rs"

[[bin]]
name = "d06_1"
path = "src/d06_1/main.rs"

[[bin]]
name = "d06_2"
path = "src/d06_2/main.rs"

[[bin]]
name = "d07_1"
path = "src/d07_1/main.rs"

[[bin]]
name = "d07_2"
path = "src/d07_2/main.rs"

[[bin]]
name = "d08_1"
path = "src/d08_1/main.rs"

[[bin]]
name = "d08_2"
path = "src/d08_2/main.rs"

[[bin]]
name = "d09_1"
path = "src/d09_1/main.rs"

[[bin]]
name = "d09_2"
path = "src/d09_2/main.rs"

[dependencies]
anyhow = "1.0"
itertools = "0.13"
regex = "1.11.1"
memoize = "0.4"
ahash = "0.8"
rayon = "1.10"
