[package]
name = "y2021"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "d01_1"
path = "src/d01_1/main.rs"

[[bin]]
name = "d01_2"
path = "src/d01_2/main.rs"

[[bin]]
name = "d02_1"
path = "src/d02_1/main.rs"

[[bin]]
name = "d02_2"
path = "src/d02_2/main.rs"

[[bin]]
name = "d03_1"
path = "src/d03_1/main.rs"

[[bin]]
name = "d03_2"
path = "src/d03_2/main.rs"

[[bin]]
name = "d04_1"
path = "src/d04_1/main.rs"

[[bin]]
name = "d04_2"
path = "src/d04_2/main.rs"

[[bin]]
name = "d05_1"
path = "src/d05_1/main.rs"

[[bin]]
name = "d05_2"
path = "src/d05_2/main.rs"

[[bin]]
name = "d06_1"
path = "src/d06_1/main.rs"

[[bin]]
name = "d06_2"
path = "src/d06_2/main.rs"

[[bin]]
name = "d07_1"
path = "src/d07_1/main.rs"

[[bin]]
name = "d07_2"
path = "src/d07_2/main.rs"

[[bin]]
name = "d08_1"
path = "src/d08_1/main.rs"

[[bin]]
name = "d08_2"
path = "src/d08_2/main.rs"

[[bin]]
name = "d09_1"
path = "src/d09_1/main.rs"

[[bin]]
name = "d09_2"
path = "src/d09_2/main.rs"

[[bin]]
name = "d10_1"
path = "src/d10_1/main.rs"

[[bin]]
name = "d10_2"
path = "src/d10_2/main.rs"

[[bin]]
name = "d11_1"
path = "src/d11_1/main.rs"

[[bin]]
name = "d11_2"
path = "src/d11_2/main.rs"

[[bin]]
name = "d12_1"
path = "src/d12_1/main.rs"

[[bin]]
name = "d12_2"
path = "src/d12_2/main.rs"

[[bin]]
name = "d13_1"
path = "src/d13_1/main.rs"

[[bin]]
name = "d13_2"
path = "src/d13_2/main.rs"

[[bin]]
name = "d14_1"
path = "src/d14_1/main.rs"

[[bin]]
name = "d14_2"
path = "src/d14_2/main.rs"

[[bin]]
name = "d15_1"
path = "src/d15_1/main.rs"

[[bin]]
name = "d15_2"
path = "src/d15_2/main.rs"

[[bin]]
name = "d16_1"
path = "src/d16_1/main.rs"

[[bin]]
name = "d16_2"
path = "src/d16_2/main.rs"

[[bin]]
name = "d17_1"
path = "src/d17_1/main.rs"

[[bin]]
name = "d17_2"
path = "src/d17_2/main.rs"

[[bin]]
name = "d18_1"
path = "src/d18_1/main.rs"

[[bin]]
name = "d18_2"
path = "src/d18_2/main.rs"

[[bin]]
name = "d19_1"
path = "src/d19_1/main.rs"

[[bin]]
name = "d19_2"
path = "src/d19_2/main.rs"

[[bin]]
name = "d20_1"
path = "src/d20_1/main.rs"

[[bin]]
name = "d20_2"
path = "src/d20_2/main.rs"

[[bin]]
name = "d21_1"
path = "src/d21_1/main.rs"

[[bin]]
name = "d21_2"
path = "src/d21_2/main.rs"

[dependencies]
rstest = "0.24"
anyhow = "1.0"
itertools = "0.13"
regex = "1.11.1"
memoize = "0.4"
ahash = "0.8"
rayon = "1.10"
