cabal-version:      3.0
name:               d03p1
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
build-type:         Simple
common warnings
    ghc-options: -Wall

executable d01p1
    import:           warnings
    main-is:          Main.hs
    build-depends:
      base ^>=4.18.2.1,
      text,
      combinatorial,
      containers
    hs-source-dirs:   app
    default-language: Haskell2010
