cabal-version:      3.0
name:               d23p1
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
build-type:         Simple
common warnings
    ghc-options: -Wall -O2

executable d01p1
    import:           warnings
    main-is:          Main.hs
    build-depends:
      base ^>=4.18.2.1,
      text >= 2.1.2,
      combinatorial,
      containers,
      MissingH,
      regex-tdfa,
      aeson >= 2.2.4,
      bytestring >= 0.12.2,
      scientific >= 0.3.8,
      vector >= 0.13.2,
      extra >= 1.8.1
    hs-source-dirs:   app
    default-language: GHC2021
    default-extensions:
        DuplicateRecordFields
        NamedFieldPuns
        OverloadedRecordDot
        OverloadedStrings
        PatternSynonyms
        TupleSections
